# readability-calc

./: .gitignore  README.md  pyproject.toml
example-policies/: ddg-privacy-policy.txt  github-privacy-statement.txt  meta-privacy-policy.txt  startpage-privacy-policy.txt
example-summaries/: ddg-08-3-2_fast.txt  ddg-08-3-2_slow.txt  ddg-13-7-4_fast.txt  ddg-13-7-4_slow.txt  ddg-16-10-6_fast.txt  ddg-16-10-6_slow.txt  ddg-22-16-7_fast.txt  ddg-22-16-7_slow.txt  sample-0-0-0.md
readability_calc/: __init__.py
